--- a/templates/bot.html
+++ b/templates/bot.html
@@ -58,7 +58,7 @@
             padding: 7px;
             margin-right: 10px;
             width: 100%;
-            height: auto;
+            /* height: auto; */
             /* max-height: 500px; */
             resize: none;
             overflow-y: hidden;
@@ -68,13 +68,15 @@
 
         button {
             padding: 10px 20px;
-            background-color: #4f524f;
+            background-color: #bf39da;
             color: white;
             border: none;
             cursor: pointer;
             border-radius: 5px;
+            align-items: center;
             justify-content: center;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
+            font-weight: bold;
         }
 
     </style>
@@ -144,5 +146,6 @@
             userInput.value = '';
         }
     </script>
+    
 </body>
 </html>
